# applenotescli

./: .gitignore  README.md  Research - Programmatic Interaction with Apple Notes.md  pyproject.toml
applenotescli/: __init__.py  applescript.py  cli.py  convert.py  converters.py  db.py  models.py
